# Operating-Systems-Algorithms

./: .gitmodules  README.md
CPU_Scheduler/Resources/: process_list1  process_list2  process_list3
CPU_Scheduler/src/: Main.java
CPU_Scheduler/src/Task1/: Algorithm.java  CPU.java  FCFS.java  List1.java  Process.java  RoundRobin.java  SJF.java  SJF_Preemptive.java
Disk_Scheduler/: CMakeLists.txt
Disk_Scheduler/app/: CMakeLists.txt  main.cpp
Disk_Scheduler/inc/: Hard_Drive.hpp  IHard_Drive.hpp  Operating_System.hpp
Disk_Scheduler/inc/Algorithms/: C_SCAN_Algorithm.hpp  FIFO_Algorithm.hpp  IAlgorithm.hpp  SCAN_Algorithm.hpp  SSTF_Algorithm.hpp
Disk_Scheduler/inc/Hard_Drive_Parts/: Disk_Block.hpp  Disk_Plate.hpp  Disk_Plates_Set.hpp  Disk_Track.hpp
Disk_Scheduler/inc/Orders/: Order.hpp  Reading_Order.hpp  Writing_Order.hpp
Disk_Scheduler/resources/: Prepared_Orders.txt
Disk_Scheduler/src/: CMakeLists.txt  Hard_Drive.cpp  IHard_Drive.cpp  Operating_System.cpp
Disk_Scheduler/src/Algorithms/: CMakeLists.txt  C_SCAN_Algorithm.cpp  FIFO_Algorithm.cpp  IAlgorithm.cpp  SCAN_Algorithm.cpp  SSTF_Algorithm.cpp
Disk_Scheduler/src/Hard_Drive_Parts/: CMakeLists.txt  Disk_Block.cpp  Disk_Plate.cpp  Disk_Plates_Set.cpp  Disk_Track.cpp
Disk_Scheduler/src/Orders/: CMakeLists.txt  Order.cpp  Reading_Order.cpp  Writing_Order.cpp
Disk_Scheduler/tests/: CMakeLists.txt
Disk_Scheduler/tests/tests/: CMakeLists.txt  Test_Hard_Drive.cpp  Test_Operating_System_SSTF.cpp
Page_Replacement_Algorithms/: CMakeLists.txt
Page_Replacement_Algorithms/app/: CMakeLists.txt  main.cpp
Page_Replacement_Algorithms/inc/: Operating_System.hpp
Page_Replacement_Algorithms/inc/Memory_Storage/: Hard_Drive.hpp
Page_Replacement_Algorithms/inc/Order_Util/: Order.hpp  Read_Order.hpp  Write_Order.hpp
Page_Replacement_Algorithms/inc/Page_Util/: Page.hpp
Page_Replacement_Algorithms/inc/Paging_Algorithms/: FIFO_Algorithm.hpp  IAlgorithm.hpp  OPT_Algorithm.hpp  RAND_Algorithm.hpp
Page_Replacement_Algorithms/src/: CMakeLists.txt
Page_Replacement_Algorithms/src/Memory_Storage/: CMakeLists.txt  Hard_Drive.cpp  Memory_Handler.cpp  RAM.cpp
Page_Replacement_Algorithms/src/Order_Util/: Read_Order.cpp  Write_Order.cpp
Page_Replacement_Algorithms/src/Page_Util/: Page.cpp  Page_Info.cpp
Page_Replacement_Algorithms/src/Paging_Algorithms/: FIFO_Algorithm.cpp  IAlgorithm.cpp  LRU_Algorithm.cpp  RAND_Algorithm.cpp
Virtual_Memory/inc/Memory_Storage/: Memory_Container.hpp  Memory_Handler.hpp  RAM.hpp  Segment_Table.hpp
Virtual_Memory/inc/Page_Util/: Page_Info.hpp
Virtual_Memory/inc/Paging_Algorithms/: LRU_Algorithm.hpp  LRU_Est_Algorithm.hpp
Virtual_Memory/src/: Operating_System.cpp
Virtual_Memory/src/Memory_Storage/: Memory_Container.cpp  Segment_Table.cpp
Virtual_Memory/src/Order_Util/: CMakeLists.txt  Order.cpp
Virtual_Memory/src/Page_Util/: CMakeLists.txt
Virtual_Memory/src/Paging_Algorithms/: CMakeLists.txt  LRU_Est_Algorithm.cpp  OPT_Algorithm.cpp
